--- a/index.html
+++ b/index.html
@@ -1,6 +1,17 @@
 <!DOCTYPE html>
-<html>
-<body>
-<h1>TEST</h1>
-</body>
+<html> 
+  <head>
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>WEST work</title> 
+    <link href="styles.css" rel="stylesheet"/>
+  </head>
+
+  <body> 
+    <h1>Testing to see if it works</h1>
+    <p>
+        <!--example of a note-->
+        here is me leaving a note to myself
+    </p>
+  </body>
 </html>
